--- a/igstudio/src/pages/index.astro
+++ b/igstudio/src/pages/index.astro
@@ -1,12 +1,30 @@
 ---
+import AreaPractices from "../components/AreaPractices.astro";
+import ChooseUs from "../components/ChooseUs.astro";
+import Footer from "../components/Footer.astro";
+import HappyClients from "../components/HappyClients.astro";
 import Header from "../components/Header.astro";
 import LetsTalk from "../components/LetsTalk.astro";
+import Newsletter from "../components/Newsletter.astro";
+import OurSelf from "../components/OurSelf.astro";
+import Team from "../components/Team.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="IGSTUDIO">
   <main>
-    <Header />
-    <LetsTalk />
+    <div class="bg-black">
+      <Header />
+      <LetsTalk />
+    </div>
+    <div class="bg-dark pb-20">
+      <OurSelf />
+      <ChooseUs />
+      <AreaPractices />
+      <HappyClients />
+      <Team/>
+      <Newsletter/>
+    </div>
+    <Footer/>
   </main>
 </Layout>
