--- a/igstudio/src/pages/index.astro
+++ b/igstudio/src/pages/index.astro
@@ -11,7 +11,7 @@ import Team from "../components/Team.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="IGSTUDIO">
+<Layout title="IgStudio">
   <main>
     <div class="bg-black">
       <Header />
