--- a/igstudio/src/layouts/Layout.astro
+++ b/igstudio/src/layouts/Layout.astro
@@ -12,10 +12,11 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <meta name="description" content="One of the best lawyers in the USA." />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="max-w-[1440px] mx-auto">
+  <body class="max-w-[1440px] mx-auto bg-background">
     <slot />
   </body>
 </html>
