fixing responsive design

--- a/igstudio/src/components/Header.astro
+++ b/igstudio/src/components/Header.astro
@@ -5,7 +5,7 @@
   <div class="basis-1/4">
     <img src="logo.svg" alt="" class="w-[140px] aspect-[140/30]" />
   </div>
-  <div class="basis-1/2">
+  <div class="basis-1/2 hidden lg:block">
     <ul class="flex flex-row gap-x-16">
       <li>
         <a
@@ -36,7 +36,7 @@
       </li>
     </ul>
   </div>
-  <div class="basis-1/4">
+  <div class="basis-1/4 hidden lg:block">
     <a
       href="#"
       class="text-white float-right py-2 px-8 transition duration-500 border border-white hover:text-primary hover:border-primary"
