--- a/igstudio/src/components/Newsletter.astro
+++ b/igstudio/src/components/Newsletter.astro
@@ -8,7 +8,7 @@ import Container from "./Container.astro"
     <h2 class="text-5xl text-white text-center">Suscribe Our Newsletter</h2>
     <form
         action="#"
-        class="flex flex-row items-center gap-x-4 rounded-full mt-8 justify-center">
+        class="flex flex-col md:flex-row items-center gap-4 rounded-full mt-8 justify-center">
         <input type="text" placeholder="Name" class="px-4 py-2 rounded-lg">
         <input type="text" placeholder="Enter your email" class="px-4 py-2 rounded-lg">
         <div>
