--- a/igstudio/src/components/OurSelf.astro
+++ b/igstudio/src/components/OurSelf.astro
@@ -3,9 +3,9 @@ import Container from "./Container.astro";
 ---
 
 <Container>
-  <section class="grid grid-cols-2 pt-20 mb-24 gap-x-16 content-center">
+  <section class="grid grid-cols-1 md:grid-cols-2 pt-20 mb-24 gap-x-16 content-center">
     <div class="">
-      <h2 class="text-5xl text-white border-r-2 border-neutral h-full py-8">
+      <h2 class="text-5xl text-white border-r-2 border-transparent md:border-neutral h-full py-8">
         Let's Introduce Ourself
       </h2>
     </div>
