--- a/igstudio/src/components/AreaPractices.astro
+++ b/igstudio/src/components/AreaPractices.astro
@@ -4,8 +4,8 @@ import Container from "./Container.astro";
 
 <Container>
   <h2 class="text-5xl text-white text-center">Area of Practices</h2>
-  <section class="mt-20 grid grid-cols-3 gap-4 pb-24">
-    <div class="relative col-span-2">
+  <section class="mt-20 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 pb-24">
+    <div class="relative col-span-1 lg:col-span-2">
       <img src="businessLaw.webp" alt="" class="w-full h-full aspect-[757/355]" />
       <h3 class="text-2xl text-white absolute bottom-4 left-4">Business Law</h3>
     </div>
@@ -21,11 +21,11 @@ import Container from "./Container.astro";
         Real State Law
       </h3>
     </div>
-    <div class="relative col-span-2">
+    <div class="relative col-span-1 lg:col-span-2">
       <img src="businessLaw-2.webp" alt="" class="w-full h-full aspect-[752/342]" />
       <h3 class="text-2xl text-white absolute bottom-4 left-4">Business Law</h3>
     </div>
-    <div class="relative col-span-2">
+    <div class="relative col-span-1 lg:col-span-2">
       <img src="landlord.webp" alt="" class="w-full h-full aspect-[752/342]" />
       <h3 class="text-2xl text-white absolute bottom-4 left-4">
         Landlord Disputes
