--- a/igstudio/src/components/ChooseUs.astro
+++ b/igstudio/src/components/ChooseUs.astro
@@ -5,7 +5,7 @@ import Container from "./Container.astro";
 
 <Container>
   <h2 class="text-5xl text-white text-center mt-40">Why Choose Us?</h2>
-  <section class="grid grid-cols-3 gap-8 mb-32 mt-12">
+  <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mb-32 mt-12">
     <Card />
   </section>
 </Container>
