--- a/igstudio/src/components/HappyClients.astro
+++ b/igstudio/src/components/HappyClients.astro
@@ -4,7 +4,7 @@ import Container from "./Container.astro";
 ---
 <Container>
   <h2 class="text-5xl text-white text-center">What says our happy Clients</h2>
-  <section class="grid grid-cols-3 gap-8 mb-32 mt-12">
+  <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-32 mt-12">
     <CardClient />
   </section>
 </Container>
