--- a/igstudio/src/components/Team.astro
+++ b/igstudio/src/components/Team.astro
@@ -39,7 +39,7 @@ const partner =
 
 <Container>
     <h2 class="text-5xl text-white text-center">Our Team</h2>
-    <section class="grid grid-cols-3 gap-x-8 gap-y-6 mt-20">
+    <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-6 mt-20">
         {partner.map(({image,name,cases}) =>(
             <a href="#" class=" hover:bg-primary border border-transparent rounded-lg hover:text-black transition duration-500">
                 <article class="flex flex-row p-4 gap-x-4">
