--- a/igstudio/src/components/LetsTalk.astro
+++ b/igstudio/src/components/LetsTalk.astro
@@ -3,7 +3,7 @@ import Container from "./Container.astro";
 ---
 
 <Container>
-  <section class="grid grid-cols-1 lg:grid-cols-2 mt-40 gap-y-10 gap-x-2 pb-32">
+  <section class="grid grid-cols-1 lg:grid-cols-2 mt-10 lg:mt-40 gap-y-10 gap-x-2 pb-32">
     <div class="my-auto">
       <h2 class="text-5xl text-white">
         You don't have to <span class="font-black">Fight them Alone.</span>
