--- a/igstudio/src/components/Header.astro
+++ b/igstudio/src/components/Header.astro
@@ -1,11 +1,10 @@
 ---
 ---
-
 <header class="px-10 flex items-center gap-x-2 pt-20">
   <div class="basis-1/4">
     <img src="logo.svg" alt="" class="w-[140px] aspect-[140/30]" />
   </div>
-  <div class="basis-1/2 hidden lg:block">
+  <nav class="basis-1/2 hidden lg:block">
     <ul class="flex flex-row gap-x-16">
       <li>
         <a
@@ -35,7 +34,7 @@
         >
       </li>
     </ul>
-  </div>
+  </nav>
   <div class="basis-1/4 hidden lg:block">
     <a
       href="#"
@@ -43,4 +42,56 @@
       >Contact Now</a
     >
   </div>
+  <div class="block lg:hidden ml-auto" id="buttonHamburguer">
+    <img src="hamburger.png" alt="hamburger" class="w-8 h-8 text-white cursor-pointer">
+  </div>
 </header>
+<div class="px-10">
+  <nav class="hidden lg:hidden transition-all" id="navBar">
+    <ul class="flex flex-col gap-x-16 items-center gap-y-5 py-4 ">
+      <li>
+        <a
+          href="#"
+          class="text-white transition duration-500 hover:text-primary">Home</a
+        >
+      </li>
+      <li>
+        <a
+          href="#"
+          class="text-white transition duration-500 hover:text-primary"
+          >Attorneys</a
+        >
+      </li>
+      <li>
+        <a
+          href="#"
+          class="text-white transition duration-500 hover:text-primary"
+          >Practice Areas</a
+        >
+      </li>
+      <li>
+        <a
+          href="#"
+          class="text-white transition duration-500 hover:text-primary"
+          >About Us</a
+        >
+      </li>
+      <li>
+        <a
+        href="#"
+        class="text-white float-right py-2 px-8 transition duration-500 border border-white hover:text-primary hover:border-primary"
+        >Contact Now</a
+      >
+      </li>
+    </ul>
+  </nav>
+</div>
+
+
+<script>
+  const buttonHamburger = document.getElementById("buttonHamburguer");
+  const navBar = document.getElementById("navBar");
+  buttonHamburger.addEventListener('click',() =>{
+    navBar.classList.toggle("hidden");
+  })
+</script>
