--- a/igstudio/src/components/OurSelf.astro
+++ b/igstudio/src/components/OurSelf.astro
@@ -3,7 +3,7 @@ import Container from "./Container.astro";
 ---
 
 <Container>
-  <section class="grid grid-cols-1 md:grid-cols-2 mt-10 lg:mt-20 mb-2 lg:mb-24 gap-x-16 content-center">
+  <section class="grid grid-cols-1 md:grid-cols-2 mb-2 lg:mb-24 gap-x-16 content-center pt-4">
     <div class="">
       <h2 class="text-5xl text-white border-r-2 border-transparent md:border-neutral h-full py-8">
         Let's Introduce Ourself
